--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -1,14 +1,22 @@
 {
   "name": "nodeapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "test",
   "main": "app.js",
+  "dependencies": {
+     "express": "^4.17.1"},
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sidjena01/jenkins_nodejs_example.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"  }
+  "bugs": {
+    "url": "https://github.com/sidjena01/jenkins_nodejs_example/issues"
+  },
+  "homepage": "https://github.com/sidjena01/jenkins_nodejs_example#readme"
 }
